minor edit/housekeeping activity

--- a/src/pages/t/knowledge.astro
+++ b/src/pages/t/knowledge.astro
@@ -56,4 +56,11 @@ On certain networks, HTTPS traffic is intercepted or handled in a way that some 
 
     </Md>
   </section>
+  <section>
+    <h2>Vart är hoppstrumporna?</h2>
+    <p lang="sv">
+      Det heter <strong>var</strong>, inte <strong>vart</strong>, och de är
+      längst in i din strumplåda.
+    </p>
+  </section>
 </Layout>
