--- a/src/pages/t/do-olls-that-will-talk/index.astro
+++ b/src/pages/t/do-olls-that-will-talk/index.astro
@@ -82,8 +82,20 @@ import "./_score.css";
     </p>
 
     <figure>
-      <div id="osmd-container" class="score"></div>
-      <figcaption>Top: Bublé. Bottom: Como.</figcaption>
+      <div id="osmd-container-straight" class="score"></div>
+      <figcaption>Straight version.</figcaption>
+    </figure>
+    <figure>
+      <div id="osmd-container-triplets" class="score"></div>
+      <figcaption>Early last-eight-triplet version.</figcaption>
+    </figure>
+    <figure>
+      <div id="osmd-container-eights" class="score"></div>
+      <figcaption>Early last-eighth version.</figcaption>
+    </figure>
+    <figure>
+      <div id="osmd-container-swing" class="score"></div>
+      <figcaption>Swing version.</figcaption>
     </figure>
   </section>
 
