minor edit/housekeeping activity

--- a/src/pages/t/do-olls-that-will-talk/index.astro
+++ b/src/pages/t/do-olls-that-will-talk/index.astro
@@ -21,6 +21,13 @@ import "./_score.css";
 
   <p class="annotation">This is a draft version.</p>
 
+  <p class="musescore-link">
+    <a href="/files/scores/dolls-that-will-talk-all.mscz">
+      <i class="fa-solid fa-music"></i>
+      Hear it for yourself in MuseScore
+    </a>
+  </p>
+
   <section>
     <p>
       Why does Perry Como sing "dolls" early in <cite>
