--- a/src/pages/t/do-olls-that-will-talk/_score.css
+++ b/src/pages/t/do-olls-that-will-talk/_score.css
@@ -60,3 +60,16 @@
   max-width: 100%;
   height: auto;
 }
+
+.musescore-link a {
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.musescore-link a:hover {
+  text-decoration: underline;
+}
+.musescore-link i {
+  margin-right: 0.4em;
+  opacity: 0.85;
+}
